<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.yuyenews</groupId>
	<artifactId>easy-framework</artifactId>
	<version>0.0.1</version>
	<packaging>pom</packaging>
	<modules>
		<module>easy-ioc</module>
		<module>easy-aop</module>
		<module>esay-mvc</module>
		<module>easy-core</module>
		<module>easy-netty</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.yuyenews</groupId>
				<artifactId>easy-aop</artifactId>
				<version>0.0.1</version>
			</dependency>
			<dependency>
				<groupId>com.yuyenews</groupId>
				<artifactId>easy-ioc</artifactId>
				<version>0.0.1</version>
			</dependency>
			<dependency>
				<groupId>com.yuyenews</groupId>
				<artifactId>esay-mvc</artifactId>
				<version>0.0.1</version>
			</dependency>
			<dependency>
				<groupId>com.yuyenews</groupId>
				<artifactId>easy-core</artifactId>
				<version>0.0.1</version>
			</dependency>
			<dependency>
				<groupId>com.yuyenews</groupId>
				<artifactId>easy-netty</artifactId>
				<version>0.0.1</version>
			</dependency>

			<dependency>
				<groupId>org.dom4j</groupId>
				<artifactId>dom4j</artifactId>
				<version>2.1.0</version>
			</dependency>

			<dependency>
				<groupId>io.netty</groupId>
				<artifactId>netty-all</artifactId>
				<version>5.0.0.Alpha2</version>
			</dependency>

			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>1.2.47</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.25</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-jdk14</artifactId>
				<version>1.7.25</version>
			</dependency>

			<dependency>
				<groupId>org.ow2.asm</groupId>
				<artifactId>asm</artifactId>
				<version>5.2</version>
			</dependency>
			<dependency>
				<groupId>cglib</groupId>
				<artifactId>cglib</artifactId>
				<version>3.2.5</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>